bin/Debug/netcoreapp3.1/bison.y
%define lr.type canonical-lr
%%
S: A "a" A "b"
| B "b" B "a"
A: "?"
B: "?"
;
%%
